- Adapted code to use new poolable mail senders