@@ -117,16 +117,15 @@ public class MessageService {
 
     List<Participant> recipients = getRecipients(participants);
 
-    List<MessageTask> result = recipients
-                                .stream()
-                                .map(p -> {
-                                  MessageTask messageTask = new MessageTask(parentMessageJob, runningDinner);
-                                  String text = participantMessageFormatter.formatParticipantMessage(runningDinner, p, participantMessage);
-                                  messageTask.setMessage(new Message(participantMessage.getSubject(), text, replyTo));
-                                  messageTask.setRecipientEmail(getRecipientEmail(p));
-                                  return messageTask;
-                                })
-                                .collect(Collectors.toList());
+    List<MessageTask> result = mailService.newMessageTasks(parentMessageJob, runningDinner, recipients.size());
+
+    for (int i = 0; i < recipients.size(); i++) {
+      Participant p = recipients.get(i);
+      String text = participantMessageFormatter.formatParticipantMessage(runningDinner, p, participantMessage);
+      MessageTask messageTask = result.get(i);
+      messageTask.setMessage(new Message(participantMessage.getSubject(), text, replyTo));
+      messageTask.setRecipientEmail(getRecipientEmail(p));
+    }
     
     return distinctMessageTasksByRecipient(result);
   }
@@ -137,7 +136,7 @@ public class MessageService {
     
     // Can of course be optimized to not load too much participants...:
     List<Participant> participants = getParticipants(adminId, participantMessage);
-    Participant participant = participants.get(0);
+    Participant participant = participants.getFirst();
     Assert.state(participants.size() == 1, "Expected exactly one participant for preview but found " + participants.size());
     String message = participantMessageFormatter.formatParticipantMessage(runningDinner, participant, participantMessage);
     return Collections.singletonList(new PreviewMessage(participant.getId(), message));
@@ -171,7 +170,7 @@ public class MessageService {
 
     // Can of course be optimized to not load too much participants...:
     List<Team> teams = getTeams(adminId, teamMessage);
-    final Team team = teams.get(0);
+    final Team team = teams.getFirst();
     Assert.state(teams.size() == 1, "Expected exactly one team for preview but found " + teams.size());
     
     final RunningDinner runningDinner = runningDinnerService.findRunningDinnerByAdminId(adminId);
@@ -211,7 +210,7 @@ public class MessageService {
 
     // Can of course be optimized to not load too much participants...:
     List<Team> teams = getTeams(adminId, dinnerRouteMessage);
-    final Team team = teams.get(0);
+    final Team team = teams.getFirst();
     Assert.state(teams.size() == 1, "Expected exactly one team for preview but found " + teams.size());
     
     final List<Team> dinnerRoute = TeamRouteBuilder.generateDinnerRoute(team);
@@ -265,7 +264,7 @@ public class MessageService {
 
     MessageJob parentMessageJob = new MessageJob(MessageType.RUNNING_DINNER_DELETION_WARN_MESSAGE, runningDinner);
 
-    MessageTask messageTask = new MessageTask(parentMessageJob, runningDinner);
+    MessageTask messageTask = mailService.newSingleMessageTask(parentMessageJob, runningDinner);
     messageTask.setMessage(new Message(runningDinnerCreatedMessage.getSubject(), runningDinnerCreatedMessage.getMessage(), mailConfig.getDefaultFrom()));
     messageTask.setRecipientEmail(runningDinner.getEmail());
     mailService.sendMessage(messageTask);
@@ -277,7 +276,7 @@ public class MessageService {
     MessageJob messageJob = new MessageJob(MessageType.NEW_RUNNING_DINNER, newRunningDinnerMessage.getRunningDinner());
     MessageJob result = messageJobRepository.save(messageJob);
 
-    MessageTask messageTask = new MessageTask(result, newRunningDinnerMessage.getRunningDinner());
+    MessageTask messageTask = mailService.newSingleMessageTask(result, newRunningDinnerMessage.getRunningDinner());
     messageTask.setMessage(new Message(newRunningDinnerMessage.getSubject(), newRunningDinnerMessage.getMessage(), mailConfig.getDefaultFrom()));
     messageTask.setRecipientEmail(newRunningDinnerMessage.getRunningDinner().getEmail());
       
@@ -300,7 +299,7 @@ public class MessageService {
     MessageJob messageJob = new MessageJob(MessageType.PARTICIPANT_SUBSCRIPTION_ACTIVATION, runningDinner);
     MessageJob result = messageJobRepository.save(messageJob);
 
-    MessageTask messageTask = new MessageTask(result, runningDinner);
+    MessageTask messageTask = mailService.newSingleMessageTask(result, runningDinner);
     messageTask.setMessage(new Message(message.getSubject(), message.getMessage(), mailConfig.getDefaultFrom()));
     messageTask.setRecipientEmail(subscribedParticipant.getEmail());
       
@@ -323,7 +322,7 @@ public class MessageService {
     MessageJob messageJob = new MessageJob(MessageType.TEAM_PARTNER_WISH, runningDinner);
     MessageJob result = messageJobRepository.save(messageJob);
 
-    MessageTask messageTask = new MessageTask(result, runningDinner);
+    MessageTask messageTask = mailService.newSingleMessageTask(result, runningDinner);
     messageTask.setMessage(new Message(message.getSubject(), message.getMessage(), fromEmail));
     messageTask.setRecipientEmail(recipientEmail);
     
@@ -357,7 +356,7 @@ public class MessageService {
       }
       // TODO: Das sollte ausserhalb dieses Services liegen!!!
       
-      MessageTask messageTask = new MessageTask(result, runningDinner);
+      MessageTask messageTask = mailService.newSingleMessageTask(result, runningDinner);
       String content = "Persönliche Nachricht: " + comment;
       messageTask.setMessage(new Message("Gastgeber geändert", content, replyTo)); // TODO: Subjekt + Template für Body
       messageTask.setRecipientEmail(getRecipientEmail(teamMember));
@@ -400,7 +399,7 @@ public class MessageService {
     List<MessageType> parentJobMessageTypes = getEndUserMessageTypes();
     Set<String> lowerCasedRecipientEmails = recipientEmails
                                               .stream()
-                                              .map(recipientEmail -> StringUtils.lowerCase(recipientEmail))
+                                              .map(StringUtils::lowerCase)
                                               .filter(Objects::nonNull)
                                               .collect(Collectors.toSet());
     
@@ -520,15 +519,21 @@ public class MessageService {
   private List<MessageTask> newTeamMessageTasks(RunningDinner runningDinner, List<Team> teams, TeamMessage teamMessage, MessageJob parentMessageJob) {
     
     final String replyTo = runningDinner.getEmail();
-    
-    List<MessageTask> result = new ArrayList<>();
+
+    int totalMessageCount = teams.stream()
+                                          .mapToInt(team -> getRecipientsOfTeam(team).size())
+                                          .sum();
+
+    List<MessageTask> result = mailService.newMessageTasks(parentMessageJob, runningDinner, totalMessageCount);
+
+    int cnt = 0;
     for (Team team : teams) {
 
       var teamMembers = getRecipientsOfTeam(team);
 
       for (Participant teamMember : teamMembers) {
         String text = teamArrangementMessageFormatter.formatTeamMemberMessage(runningDinner, teamMember, team, teamMessage);
-        MessageTask messageTask = new MessageTask(parentMessageJob, runningDinner);
+        MessageTask messageTask = result.get(cnt++);
         messageTask.setMessage(new Message(teamMessage.getSubject(), text, replyTo));
         messageTask.setRecipientEmail(getRecipientEmail(teamMember));
         result.add(messageTask);
@@ -540,16 +545,19 @@ public class MessageService {
   private List<MessageTask> newDinnerRouteMessageTasks(RunningDinner runningDinner, List<Team> teams, DinnerRouteMessage dinnerRouteMessage, MessageJob parentMessageJob) {
     
     final String replyTo = runningDinner.getEmail();
-    
-    List<MessageTask> result = new ArrayList<>();
+
+    int totalMessageCount = teams.stream()
+        .mapToInt(team -> getRecipientsOfTeam(team).size())
+        .sum();
+    List<MessageTask> result = mailService.newMessageTasks(parentMessageJob, runningDinner, totalMessageCount);
+
+    int cnt = 0;
     for (Team team : teams) {
-
       var teamMembers = getRecipientsOfTeam(team);
-
       for (Participant teamMember : teamMembers) {
         List<Team> dinnerRoute = TeamRouteBuilder.generateDinnerRoute(team);
         String text = dinnerRouteMessageFormatter.formatDinnerRouteMessage(runningDinner, teamMember, team, dinnerRoute, dinnerRouteMessage);
-        MessageTask messageTask = new MessageTask(parentMessageJob, runningDinner);
+        MessageTask messageTask = result.get(cnt++);
         messageTask.setMessage(new Message(dinnerRouteMessage.getSubject(), text, replyTo));
         messageTask.setRecipientEmail(getRecipientEmail(teamMember));
         result.add(messageTask);
